// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots LangSelect Default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007ac9",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        Array [
          Object {},
          undefined,
        ],
      ]
    }
  >
    <View
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Array [
            Object {},
            Array [
              Object {
                "backgroundColor": "#0062a1",
                "borderRadius": 3,
                "height": 21,
                "width": 28,
              },
              undefined,
            ],
          ],
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B, Arial, Georgia, serif",
              "fontSize": 12.25,
              "fontWeight": "500",
            },
            undefined,
          ]
        }
      >
        FI
      </Text>
    </View>
    <View
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Array [
            Object {},
            Array [
              Object {
                "borderRadius": 3,
                "height": 21,
                "width": 28,
              },
              undefined,
            ],
          ],
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B, Arial, Georgia, serif",
              "fontSize": 12.25,
              "fontWeight": "500",
            },
            undefined,
          ]
        }
      >
        SV
      </Text>
    </View>
    <View
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Array [
            Object {},
            Array [
              Object {
                "borderRadius": 3,
                "height": 21,
                "width": 28,
              },
              undefined,
            ],
          ],
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B, Arial, Georgia, serif",
              "fontSize": 12.25,
              "fontWeight": "500",
            },
            undefined,
          ]
        }
      >
        EN
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots LangSelect Small 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007ac9",
          "justifyContent": "center",
          "overflow": "hidden",
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
        undefined,
      ]
    }
  >
    <View
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Array [
            Object {},
            Array [
              Object {
                "borderRadius": 3,
                "flexDirection": "row",
                "height": 21,
                "justifyContent": "space-between",
                "width": 45.5,
              },
              undefined,
            ],
          ],
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B, Arial, Georgia, serif",
              "fontSize": 12.25,
              "fontWeight": "300",
              "lineHeight": 20,
            },
            undefined,
          ]
        }
      >
        FI
      </Text>
      <Svg
        height="0.75"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 42.5 27.47"
        width="0.75"
      >
        <Path
          d="M35.043,1.271 L21.214,15.140 L7.384,1.271 C5.687,-0.431 2.934,-0.431 1.234,1.271 L1.234,1.271 C-0.463,2.973 -0.463,5.733 1.234,7.436 L21.214,27.468 L41.191,7.436 C42.887,5.733 42.887,2.973 41.191,1.271 L41.191,1.271 C39.493,-0.431 36.743,-0.431 35.043,1.271 Z"
          fill="#ffffff"
          id="arrow"
        />
      </Svg>
    </View>
    <View
      style={
        Object {
          "maxHeight": 0,
        }
      }
    />
  </View>
</View>
`;
